# check-list-bot

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  main.cpp  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: cpp-style.instructions.md  testing-style.instructions.md
.github/workflows/: build.yml  clang-format-check.yml  clang-tidy-check.yml  docker.yml
cmake/: functions.cmake
deploy/docker/: .env.example  Dockerfile  compose.yml  entrypoint.sh  healthcheck.sh
profiles/: Debug
scripts/: build.sh  check_tidy.sh  clean.sh  create_env.sh  deploy_docker.sh  fix_style.sh  init_project.sh  local_run.sh
src/bot/: Bot.cpp  Bot.hpp  CMakeLists.txt
src/bot/handlers/: CMakeLists.txt  ConsoleHandler.cpp  ConsoleHandler.hpp  InlineKeyboardHandler.cpp  InlineKeyboardHandler.hpp  ReplyKeyboardHandler.cpp  ReplyKeyboardHandler.hpp  SlashCommandKeyboardHandler.cpp  SlashCommandKeyboardHandler.hpp
src/bot/keyboards/: CMakeLists.txt  InlineKeyboard.cpp  InlineKeyboard.hpp  ReplyKeyboard.cpp  ReplyKeyboard.hpp  SlashCommandKeyboard.cpp  SlashCommandKeyboard.hpp
src/database/: CMakeLists.txt  DatabaseConnection.hpp  SQL.hpp  ScopedStatement.cpp  ScopedStatement.hpp  StatementManager.cpp  StatementManager.hpp  Task.hpp  TaskDB.cpp  TaskDB.hpp
src/log/: CMakeLists.txt  Log.cpp  Log.hpp
src/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
tests/: .clang-tidy  CMakeLists.txt  Test_Log.cpp  Test_ScopedStatement.cpp  Test_StatementManager.cpp  Test_TaskDB.cpp  Test_TransactionGuard.cpp
