[tool.poetry]
name = "check-list-bot"
version = "0.1.0"
description = "Telegram Bot for tasks"
authors = ["Joraslav <yar.mozg2002@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.3.0"
isort = "^8.0.1"
flake8 = "^7.3.0"
conan = "2.24.0"
cmake = "4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
